listando todos diários do paciente

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,10 @@
     <string name="title_activity_tela_respostas">Tela Respostas</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_tela_formulario">Diário de dor</string>
+    <string name="listaDiario">Meus Registros</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_tela_costas">Tela Costas</string>
+    <string name="title_activity_tela_lista_diario">TelaListaDiario</string>
 </resources>
