--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_tela_costas">Tela Costas</string>
     <string name="title_activity_tela_lista_diario">TelaListaDiario</string>
+    <string name="title_activity_tela_diario_detalhes">TelaDiarioDetalhes</string>
 </resources>
